--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,6 @@ body {
     color: #fff;
 }
 
-
 /* Typeography General*/
 h1 {
     font-family: 'Fira Sans', sans-serif;
@@ -27,9 +26,9 @@ h1 {
 }
 
 li {
-    color: white; 
-    background-color: grey; 
-    font-size: 2.5em; 
+    color: white;
+    background-color: grey;
+    font-size: 2.5em;
     border:black solid 2px;
 }
 
@@ -115,7 +114,7 @@ section {
 
 /* Header Styles */
 .page__header {
-    background: #fff;
+    background: transparent;
     position: fixed;
     top: 0;
     width: 100%;
@@ -234,9 +233,9 @@ section.your-active-class .landing__container::after {
 }
 
 li.your-active-class{
-    color: white; 
-    background-color: red; 
-    font-size: 2.5em; 
+    color: white;
+    background-color: red;
+    font-size: 2.5em;
     border:black solid 2px;
 }
 
